Changelog
=========


1.0.3 (unreleased)
------------------

- Nothing changed yet.


1.0.2 (2014-01-31)
------------------

- Fix previous brown bag releases: make buildout recipe work.
  [jone]


1.0.1 (2014-01-31)
------------------

- Fix missing distribution buildout error.
  [jone]


1.0.0 (2014-01-31)
------------------

- Initial implementation.
  [jone]