@@ -33,26 +33,26 @@ class TestRecipe(TestCase):
         output = self.system(self.buildout).strip()
         self.assertRegexpMatches(output, r'^Installing translations')
         self.assertRegexpMatches(output,
-                                 r'Generated script.*bin/translations')
+                                 r'Generated script.*bin/masstranslate')
 
     def test_recipe_creates_translations_script(self):
         self.write('buildout.cfg', DEFAULT_BUILDOUT_CONFIG)
         self.system(self.buildout)
-        expected = os.path.join(self.sample_buildout, 'bin', 'translations')
+        expected = os.path.join(self.sample_buildout, 'bin', 'masstranslate')
         self.assertTrue(os.path.exists(expected),
                         'Missing executable %s' % expected)
 
     def test_script_is_executable(self):
         self.write('buildout.cfg', DEFAULT_BUILDOUT_CONFIG)
         self.system(self.buildout)
-        path = os.path.join(self.sample_buildout, 'bin', 'translations')
+        path = os.path.join(self.sample_buildout, 'bin', 'masstranslate')
         self.assertTrue(os.access(path, os.X_OK),
                         '%s should be executable' % path)
 
     def test_source_path_is_passed_as_argument(self):
         self.write('buildout.cfg', DEFAULT_BUILDOUT_CONFIG)
         self.system(self.buildout)
-        path = os.path.join(self.sample_buildout, 'bin', 'translations')
+        path = os.path.join(self.sample_buildout, 'bin', 'masstranslate')
         with open(path) as file_:
             script = file_.read()
 
@@ -64,7 +64,7 @@ class TestRecipe(TestCase):
                     DEFAULT_BUILDOUT_CONFIG,
                     'spreadsheet = %s' % url)))
         self.system(self.buildout)
-        path = os.path.join(self.sample_buildout, 'bin', 'translations')
+        path = os.path.join(self.sample_buildout, 'bin', 'masstranslate')
         with open(path) as file_:
             script = file_.read()
 
@@ -73,7 +73,7 @@ class TestRecipe(TestCase):
     def test_spreadsheet_is_None_by_default(self):
         self.write('buildout.cfg', DEFAULT_BUILDOUT_CONFIG)
         self.system(self.buildout)
-        path = os.path.join(self.sample_buildout, 'bin', 'translations')
+        path = os.path.join(self.sample_buildout, 'bin', 'masstranslate')
         with open(path) as file_:
             script = file_.read()
 
