@@ -5,7 +5,8 @@ Changelog
 1.0.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Rename bin/translations to bin/masstranslate.
+  [jone]
 
 
 1.0.2 (2014-01-31)
